--- a/config/hypr/colors/hyprlock-colors.conf
+++ b/config/hypr/colors/hyprlock-colors.conf
@@ -1,107 +1,107 @@
 # Image Path
-$image = /home/spectre/Pictures/wallpapers/Lofi-Anime-Girl.png
+$image = /home/spectre/Pictures/wallpapers/dcsm2x8-bbf27e63-7a2e-4419-a509-10d647ac8cdc.gif
 
 # An alpha background
-$surface_alpha = rgba(1e100b4d)
+$surface_alpha = rgba(13121c4d)
 
 # All Colors
 
-$background = rgba(1e100bff)
+$background = rgba(13121cff)
 
 $error = rgba(ffb4abff)
 
 $error_container = rgba(93000aff)
 
-$inverse_on_surface = rgba(3d2d26ff)
+$inverse_on_surface = rgba(302f3aff)
 
-$inverse_primary = rgba(94416fff)
+$inverse_primary = rgba(00658eff)
 
-$inverse_surface = rgba(f9ddd3ff)
+$inverse_surface = rgba(e4e0efff)
 
-$on_background = rgba(f9ddd3ff)
+$on_background = rgba(e4e0efff)
 
 $on_error = rgba(690005ff)
 
 $on_error_container = rgba(ffdad6ff)
 
-$on_primary = rgba(5b113fff)
+$on_primary = rgba(00344cff)
 
-$on_primary_container = rgba(ffd8e8ff)
+$on_primary_container = rgba(c7e7ffff)
 
-$on_primary_fixed = rgba(3d0027ff)
+$on_primary_fixed = rgba(001e2eff)
 
-$on_primary_fixed_variant = rgba(772956ff)
+$on_primary_fixed_variant = rgba(004c6cff)
 
-$on_secondary = rgba(521d3bff)
+$on_secondary = rgba(00344cff)
 
-$on_secondary_container = rgba(ffd8e8ff)
+$on_secondary_container = rgba(c7e7ffff)
 
-$on_secondary_fixed = rgba(380725ff)
+$on_secondary_fixed = rgba(001e2eff)
 
-$on_secondary_fixed_variant = rgba(6d3352ff)
+$on_secondary_fixed_variant = rgba(004c6cff)
 
-$on_surface = rgba(f9ddd3ff)
+$on_surface = rgba(e4e0efff)
 
-$on_surface_variant = rgba(e7beaeff)
+$on_surface_variant = rgba(c7c4dcff)
 
-$on_tertiary = rgba(552008ff)
+$on_tertiary = rgba(2d2960ff)
 
-$on_tertiary_container = rgba(ffdbceff)
+$on_tertiary_container = rgba(e3dfffff)
 
-$on_tertiary_fixed = rgba(370e00ff)
+$on_tertiary_fixed = rgba(17124aff)
 
-$on_tertiary_fixed_variant = rgba(71361cff)
+$on_tertiary_fixed_variant = rgba(434078ff)
 
-$outline = rgba(ad897bff)
+$outline = rgba(918ea5ff)
 
-$outline_variant = rgba(5d4035ff)
+$outline_variant = rgba(464559ff)
 
-$primary = rgba(ffafd5ff)
+$primary = rgba(85cfffff)
 
-$primary_container = rgba(772956ff)
+$primary_container = rgba(004c6cff)
 
-$primary_fixed = rgba(ffd8e8ff)
+$primary_fixed = rgba(c7e7ffff)
 
-$primary_fixed_dim = rgba(ffafd5ff)
+$primary_fixed_dim = rgba(85cfffff)
 
 $scrim = rgba(000000ff)
 
-$secondary = rgba(fdb0d4ff)
+$secondary = rgba(93cdf6ff)
 
-$secondary_container = rgba(6d3352ff)
+$secondary_container = rgba(004c6cff)
 
-$secondary_fixed = rgba(ffd8e8ff)
+$secondary_fixed = rgba(c7e7ffff)
 
-$secondary_fixed_dim = rgba(fdb0d4ff)
+$secondary_fixed_dim = rgba(93cdf6ff)
 
 $shadow = rgba(000000ff)
 
-$source_color = rgba(dd7142ff)
+$source_color = rgba(1c1a3aff)
 
-$surface = rgba(1e100bff)
+$surface = rgba(13121cff)
 
-$surface_bright = rgba(47352fff)
+$surface_bright = rgba(393843ff)
 
-$surface_container = rgba(2b1c16ff)
+$surface_container = rgba(1f1e29ff)
 
-$surface_container_high = rgba(362620ff)
+$surface_container_high = rgba(2a2934ff)
 
-$surface_container_highest = rgba(42312aff)
+$surface_container_highest = rgba(35343fff)
 
-$surface_container_low = rgba(271812ff)
+$surface_container_low = rgba(1b1a25ff)
 
-$surface_container_lowest = rgba(180b06ff)
+$surface_container_lowest = rgba(0e0d17ff)
 
-$surface_dim = rgba(1e100bff)
+$surface_dim = rgba(13121cff)
 
-$surface_tint = rgba(ffafd5ff)
+$surface_tint = rgba(85cfffff)
 
-$surface_variant = rgba(5d4035ff)
+$surface_variant = rgba(464559ff)
 
-$tertiary = rgba(ffb598ff)
+$tertiary = rgba(c5c0ffff)
 
-$tertiary_container = rgba(71361cff)
+$tertiary_container = rgba(434078ff)
 
-$tertiary_fixed = rgba(ffdbceff)
+$tertiary_fixed = rgba(e3dfffff)
 
-$tertiary_fixed_dim = rgba(ffb598ff)
+$tertiary_fixed_dim = rgba(c5c0ffff)
