--- a/config/kitty/matugen-colors.conf
+++ b/config/kitty/matugen-colors.conf
@@ -1,43 +1,43 @@
-cursor #ffafd5
-cursor_text_color #5b113f
+cursor #85cfff
+cursor_text_color #00344c
 
-foreground #f9ddd3
-background #1e100b
+foreground #e4e0ef
+background #13121c
 
-selection_foreground #521d3b
-selection_background #6d3352
+selection_foreground #00344c
+selection_background #004c6c
 
-url_color #ffb598
+url_color #c5c0ff
 
 # Black & Bright Black
-color0 #5d4035
+color0 #464559
 # nice for text auto compilition
-color8 #5d4035 
+color8 #464559 
 
 # Red
 color1 #ffb4ab
 color9 #93000a
 
 # Green
-color2 #fdb0d4
-color10 #6d3352
+color2 #93cdf6
+color10 #004c6c
 
 # Yellow
-color3 #ffb598
-color11 #71361c
+color3 #c5c0ff
+color11 #434078
 
 # Blue
-color4 #ffafd5
-color12 #772956
+color4 #85cfff
+color12 #004c6c
 
 # Magenta
-color5 #ffafd5
-color13 #94416f
+color5 #85cfff
+color13 #00658e
 
 # Cyan
-color6 #ffb598
-color14 #ffdbce
+color6 #c5c0ff
+color14 #e3dfff
 
 # White & Bright White
-color7 #f9ddd3
-color15 #3d2d26
+color7 #e4e0ef
+color15 #302f3a
