--- a/config/qt5ct/matugen.conf
+++ b/config/qt5ct/matugen.conf
@@ -1,5 +1,5 @@
 [ColorScheme]
-active_colors=#f9ddd3, #1e100b, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #f9ddd3, #ffffff, #f9ddd3, #1e100b, #1e100b, #000000, #772956, #ffd8e8, #fdb0d4, #ffafd5, #1e100b, #000000, #1e100b, #f9ddd3, #fdb0d4
-disabled_colors=#f9ddd3, #1e100b, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #f9ddd3, #ffffff, #f9ddd3, #1e100b, #1e100b, #000000, #772956, #ffd8e8, #fdb0d4, #ffafd5, #1e100b, #000000, #1e100b, #f9ddd3, #fdb0d4
-inactive_colors=#f9ddd3, #1e100b, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #f9ddd3, #ffffff, #f9ddd3, #1e100b, #1e100b, #000000, #772956, #ffd8e8, #fdb0d4, #ffafd5, #1e100b, #000000, #1e100b, #f9ddd3, #fdb0d4
+active_colors=#e4e0ef, #13121c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e4e0ef, #ffffff, #e4e0ef, #13121c, #13121c, #000000, #004c6c, #c7e7ff, #93cdf6, #85cfff, #13121c, #000000, #13121c, #e4e0ef, #93cdf6
+disabled_colors=#e4e0ef, #13121c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e4e0ef, #ffffff, #e4e0ef, #13121c, #13121c, #000000, #004c6c, #c7e7ff, #93cdf6, #85cfff, #13121c, #000000, #13121c, #e4e0ef, #93cdf6
+inactive_colors=#e4e0ef, #13121c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e4e0ef, #ffffff, #e4e0ef, #13121c, #13121c, #000000, #004c6c, #c7e7ff, #93cdf6, #85cfff, #13121c, #000000, #13121c, #e4e0ef, #93cdf6
 
