--- a/config/kitty/matugen-colors.conf
+++ b/config/kitty/matugen-colors.conf
@@ -1,43 +1,43 @@
-cursor #85cfff
-cursor_text_color #00344c
+cursor #50d8ed
+cursor_text_color #00363d
 
-foreground #e4e0ef
-background #13121c
+foreground #dee2ef
+background #0f141c
 
-selection_foreground #00344c
-selection_background #004c6c
+selection_foreground #00363d
+selection_background #004f58
 
-url_color #c5c0ff
+url_color #a7c8ff
 
 # Black & Bright Black
-color0 #464559
+color0 #3d4758
 # nice for text auto compilition
-color8 #464559 
+color8 #3d4758 
 
 # Red
 color1 #ffb4ab
 color9 #93000a
 
 # Green
-color2 #93cdf6
-color10 #004c6c
+color2 #82d3e2
+color10 #004f58
 
 # Yellow
-color3 #c5c0ff
-color11 #434078
+color3 #a7c8ff
+color11 #244777
 
 # Blue
-color4 #85cfff
-color12 #004c6c
+color4 #50d8ed
+color12 #004f58
 
 # Magenta
-color5 #85cfff
-color13 #00658e
+color5 #50d8ed
+color13 #006875
 
 # Cyan
-color6 #c5c0ff
-color14 #e3dfff
+color6 #a7c8ff
+color14 #d5e3ff
 
 # White & Bright White
-color7 #e4e0ef
-color15 #302f3a
+color7 #dee2ef
+color15 #2c313a
