--- a/config/qt6ct/matugen.conf
+++ b/config/qt6ct/matugen.conf
@@ -1,5 +1,5 @@
 [ColorScheme]
-active_colors=#e4e0ef, #13121c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e4e0ef, #ffffff, #e4e0ef, #13121c, #13121c, #000000, #004c6c, #c7e7ff, #93cdf6, #85cfff, #13121c, #000000, #13121c, #e4e0ef, #93cdf6
-disabled_colors=#e4e0ef, #13121c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e4e0ef, #ffffff, #e4e0ef, #13121c, #13121c, #000000, #004c6c, #c7e7ff, #93cdf6, #85cfff, #13121c, #000000, #13121c, #e4e0ef, #93cdf6
-inactive_colors=#e4e0ef, #13121c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e4e0ef, #ffffff, #e4e0ef, #13121c, #13121c, #000000, #004c6c, #c7e7ff, #93cdf6, #85cfff, #13121c, #000000, #13121c, #e4e0ef, #93cdf6
+active_colors=#dee2ef, #0f141c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dee2ef, #ffffff, #dee2ef, #0f141c, #0f141c, #000000, #004f58, #9cefff, #82d3e2, #50d8ed, #0f141c, #000000, #0f141c, #dee2ef, #82d3e2
+disabled_colors=#dee2ef, #0f141c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dee2ef, #ffffff, #dee2ef, #0f141c, #0f141c, #000000, #004f58, #9cefff, #82d3e2, #50d8ed, #0f141c, #000000, #0f141c, #dee2ef, #82d3e2
+inactive_colors=#dee2ef, #0f141c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dee2ef, #ffffff, #dee2ef, #0f141c, #0f141c, #000000, #004f58, #9cefff, #82d3e2, #50d8ed, #0f141c, #000000, #0f141c, #dee2ef, #82d3e2
 
