--- a/config/qt6ct/qt6ct.conf
+++ b/config/qt6ct/qt6ct.conf
@@ -1,5 +1,5 @@
 [Appearance]
-color_scheme_path=/home/spectre/.config/qt6ct/colors/matugen-qt6ct.conf
+color_scheme_path=$HOME/.config/qt6ct/colors/matugen.conf
 custom_palette=true
 standard_dialogs=default
 style=Fusion
