add new wallpapers and give a try to solve hyprlock resolution by make valus in %

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -32,7 +32,7 @@ label {
     color = $on_surface
     font_size = 90
     font_family = SF Pro Display Bold
-    position = 0, 250
+    position = 0%, 35%
     halign = center
     valign = center
 }
@@ -44,7 +44,7 @@ label {
     color = $on_surface
     font_size = 40
     font_family = SF Pro Display Bold
-    position = 0, 150
+    position = 0%, 20%
     halign = center
     valign = center
 }
@@ -56,7 +56,7 @@ label {
     color = $on_surface
     font_size = 20
     font_family = SF Pro Display Bold
-    position = 0, 90
+    position = 0%, 10%
     halign = center
     valign = center
 }
@@ -70,10 +70,10 @@ label {
     text = cmd[update:1000] echo -e "   Good $(date +%H | awk '{if ($1 < 12) print "Morning "; else if ($1 < 18) print "Afternoon "; else print "Evening "}')"   
     color = $on_surface
 
-    
+
     font_size = 25
     font_family = SF Pro Display Bold
-    position = 0, 10
+    position = 0%, 5%
     halign = center
     valign = center
 }
@@ -81,7 +81,7 @@ label {
 # INPUT FIELD
 input-field {
     monitor =
-    size = 300, 60
+    size = 25%, 10%
     outline_thickness = 2
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
@@ -90,16 +90,21 @@ input-field {
     outer_color = $primary                         # لون الإطار (منسجم مع theme)
     inner_color = $surface_container_highest       # خلفية input واضحة لكن ناعمة
     font_color  = $on_surface                      # لون الخط في أي خلفية غامقة
+
   
+
     fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
+    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered
+
     font_family = SF Pro Display Bold
-    placeholder_text = <i><span foreground="$on-surface-variant">🔒Input Password...</span></i>
+
+    placeholder_text = 🔒Input Password...
+
     hide_input = false
     fail_color = $error # if authentication failed, changes outer_color and fail message color
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
 
-    position = 0, -70
+    position = 0%, -10%
     halign = center
     valign = center
 }
@@ -111,7 +116,7 @@ label {
     text = 󰐥  󰜉  󰤄
     color = $on_surface
     font_size = 50
-    position = 0, 100
+    position = 0%, 18%
     halign = center
     valign = bottom
 }
