--- a/config/kitty/matugen-colors.conf
+++ b/config/kitty/matugen-colors.conf
@@ -1,43 +1,43 @@
-cursor #50d8ed
-cursor_text_color #00363d
+cursor #4cdadc
+cursor_text_color #003738
 
-foreground #dee2ef
-background #0f141c
+foreground #dce3ee
+background #0d141b
 
-selection_foreground #00363d
-selection_background #004f58
+selection_foreground #003738
+selection_background #004f51
 
-url_color #a7c8ff
+url_color #9bcbfb
 
 # Black & Bright Black
-color0 #3d4758
+color0 #3a4857
 # nice for text auto compilition
-color8 #3d4758 
+color8 #3a4857 
 
 # Red
 color1 #ffb4ab
 color9 #93000a
 
 # Green
-color2 #82d3e2
-color10 #004f58
+color2 #80d4d6
+color10 #004f51
 
 # Yellow
-color3 #a7c8ff
-color11 #244777
+color3 #9bcbfb
+color11 #0e4a73
 
 # Blue
-color4 #50d8ed
-color12 #004f58
+color4 #4cdadc
+color12 #004f51
 
 # Magenta
-color5 #50d8ed
-color13 #006875
+color5 #4cdadc
+color13 #00696b
 
 # Cyan
-color6 #a7c8ff
-color14 #d5e3ff
+color6 #9bcbfb
+color14 #cee5ff
 
 # White & Bright White
-color7 #dee2ef
-color15 #2c313a
+color7 #dce3ee
+color15 #2a3139
