--- a/config/qt6ct/matugen.conf
+++ b/config/qt6ct/matugen.conf
@@ -1,5 +1,5 @@
 [ColorScheme]
-active_colors=#dee2ef, #0f141c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dee2ef, #ffffff, #dee2ef, #0f141c, #0f141c, #000000, #004f58, #9cefff, #82d3e2, #50d8ed, #0f141c, #000000, #0f141c, #dee2ef, #82d3e2
-disabled_colors=#dee2ef, #0f141c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dee2ef, #ffffff, #dee2ef, #0f141c, #0f141c, #000000, #004f58, #9cefff, #82d3e2, #50d8ed, #0f141c, #000000, #0f141c, #dee2ef, #82d3e2
-inactive_colors=#dee2ef, #0f141c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dee2ef, #ffffff, #dee2ef, #0f141c, #0f141c, #000000, #004f58, #9cefff, #82d3e2, #50d8ed, #0f141c, #000000, #0f141c, #dee2ef, #82d3e2
+active_colors=#dce3ee, #0d141b, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dce3ee, #ffffff, #dce3ee, #0d141b, #0d141b, #000000, #004f51, #6ff6f9, #80d4d6, #4cdadc, #0d141b, #000000, #0d141b, #dce3ee, #80d4d6
+disabled_colors=#dce3ee, #0d141b, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dce3ee, #ffffff, #dce3ee, #0d141b, #0d141b, #000000, #004f51, #6ff6f9, #80d4d6, #4cdadc, #0d141b, #000000, #0d141b, #dce3ee, #80d4d6
+inactive_colors=#dce3ee, #0d141b, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dce3ee, #ffffff, #dce3ee, #0d141b, #0d141b, #000000, #004f51, #6ff6f9, #80d4d6, #4cdadc, #0d141b, #000000, #0d141b, #dce3ee, #80d4d6
 
