kitty matugen is the best

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,7 +6,8 @@
 # --------------------------
 
 # ---------------------------------------
-# Kitty Config - Pywal Compatible Setup
+# Kitty Config - Matugen, Pywal Setup 
+# written by :Samir Ahmed
 # ---------------------------------------
 
 ## === Font Configuration ===
@@ -44,7 +45,9 @@ background_opacity          0.8
 dynamic_background_opacity  true
 
 ## === Theme Colors from matugen ===
-include matugen-colors.conf
+include ~/.cache/wal/colors-kitty.conf
+include ~/.cache/wallpaper-theme/kitty-colors-base.conf
+
  # auto change color for currents opend terminals
 
 # Optional shell
