--- a/config/matugen/templates/kitty-colors.conf
+++ b/config/matugen/templates/kitty-colors.conf
@@ -1,3 +1,7 @@
+# Generated my matugen
+# writen by Samir Ahmed 
+# nice tempelete to fully work with matugen colors 
+
 cursor {{colors.primary.default.hex}}
 cursor_text_color {{colors.on_primary.default.hex}}
 
