--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -1,5 +1,5 @@
 [Appearance]
-color_scheme_path=$HOME.config/qt5ct/colors/matugen-qt5ct.conf
+color_scheme_path=$HOME/.cache/wallpaper-theme/qtct-colors.conf
 custom_palette=true
 standard_dialogs=default
 style=Fusion
