--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,3 +1,17 @@
+/*
+ _       __               ____              
+| |     / /____ _ __  __ / __ ) ____ _ _____
+| | /| / // __ `// / / // __  |/ __ `// ___/
+| |/ |/ // /_/ // /_/ // /_/ // /_/ // /    
+|__/|__/ \__,_/ \__, //_____/ \__,_//_/     
+               /____/                       
+---------------------------------------------------------------
+Written by Samir Ahmed
+
+Repository Link: https://github.com/samir176520/dotfiles
+---------------------------------------------------------------               
+*/
+
 // -*- mode: jsonc -*-
 {
   // "layer": "top", // Waybar at top layer
@@ -5,12 +19,13 @@
   //"height": 30, // Waybar height (to be removed for auto height)
   // "width": 1280, // Waybar width
   "spacing": 4, // Gaps between modules (4px)
+
   // Choose the order of the modules
   "modules-left": [
     "custom/launcher",
     "hyprland/workspaces",
     "hyprland/submap",
-    "hyprland/window",
+    "hyprland/window"
   ],
   "modules-center": [
     "idle_inhibitor",
@@ -19,21 +34,26 @@
     "temperature",
     "pulseaudio",
     "privacy",
-    "custom/camera",
+    "custom/camera"
   ],
   "modules-right": [
-    //"mpd",
     "tray",
-    //"network",
     "power-profiles-daemon",
     "backlight",
     "battery",
-    //"custom/battery",
-    //"battery#bat2",
     "clock",
-
-    "custom/power",
+    "custom/power"
   ],
+
+
+  "custom/launcher": {
+    "format": " {}",
+    "exec": "date +'Day %j'", // Julian day counter
+    "on-click": "kitty -e sh -c 'fastfetch; read -p \"Press enter to close...\"'",
+    "tooltip": true,
+    "tooltip-format": "System Info Launcher"
+  },
+
   "hyprland/workspaces": {
     "format": "{icon} {windows}",
     "window-rewrite-default": "",
@@ -70,13 +90,15 @@
       // ---- System Tools ----
       "class<.*[sS]ettings.*>": "",
       "class<.*[dD]iscord.*>": "󰙯",
-      "class<.*[sS]team.*>": "",
-    },
+      "class<.*[sS]team.*>": ""
+    }
   },
 
   "hyprland/window": {
-    "format": "{class}",
-    "separate-outputs": true,
+    "format": "{class}",               // Shown in the bar
+    "tooltip": true,
+    "tooltip-format": "{title}",       // Shown on hover
+    "separate-outputs": true
   },
 
   // define custome modes and this work like indicator for this mode
@@ -84,58 +106,29 @@
   //    "format": "<span style=\"italic\">{}</span>"
   //},
 
-  //"mpd": {
-  //    "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-  //    "format-disconnected": "Disconnected ",
-  //    "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-  //    "unknown-tag": "N/A",
-  //    "interval": 5,
-  //    "consume-icons": {
-  //        "on": " "
-  //    },
-  //    "random-icons": {
-  //        "off": "<span color=\"#f53c3c\"></span> ",
-  //        "on": " "
-  //    },
-  //    "repeat-icons": {
-  //        "on": " "
-  //    },
-  //    "single-icons": {
-  //        "on": "1 "
-  //    },
-  //    "state-icons": {
-  //        "paused": "",
-  //       "playing": ""
-  //    },
-  //    "tooltip-format": "MPD (connected)",
-  //    "tooltip-format-disconnected": "MPD (disconnected)"
-  //},
   "idle_inhibitor": {
     "format": "{icon}",
     "format-icons": {
       "activated": "",
-      "deactivated": "",
-    },
+      "deactivated": ""
+    }
   },
-  "tray": {
-    "icon-size": 15,
-    "spacing": 10,
-  },
-  "clock": {
-    // "timezone": "America/New_York",
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-    "format-alt": "{:%Y-%m-%d}",
-  },
+  
+
   "cpu": {
     "format": "{usage}% ",
-    "tooltip": true,
+    "tooltip": true
   },
+
+
   "memory": {
     "interval": 5,
     "format": "{}% ",
     "tooltip": true,
-    "tooltip-format": " RAM: {used} / {total} GB\n💾 Swap: {swapUsed} / {swapTotal} GB",
+    "tooltip-format": " RAM: {used} / {total} GB\n💾 Swap: {swapUsed} / {swapTotal} GB"
   },
+
+
   "temperature": {
     "thermal-zone": 1,
     "hwmon-path": "/sys/class/hwmon/hwmon2/temp_input",
@@ -144,66 +137,9 @@
     "format": "{temperatureC}°C {icon}",
     "format-icons": ["", "", "", "", ""],
     "tooltip": true,
-    "on-double-click": "kitty -e btop",
+    "on-double-click": "kitty -e btop"
   },
 
-  "backlight": {
-    // "device": "acpi_video1",
-    "format": "{percent}% {icon}",
-    "format-icons": ["", "", "", "", "", "", "", "", ""],
-  },
-  "battery": {
-    "states": {
-      "good": 80,
-      "warning": 20,
-      "critical": 10,
-    },
-    "format": "{capacity}% {icon}",
-    "format-full": "{capacity}% {icon}",
-    "format-charging": "󰂅 {capacity}%",
-    "format-charging-warning": "󰢝 {capacity}%",
-    "format-charging-critical": "󰢜 {capacity}%",
-    "format-plugged": "󰂅 {capacity}%",
-    "format-alt": "󱧥",
-    // "format-good": "", // An empty format will hide the module
-    //"format-full": "",
-    "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
-  },
-  "custom/battery": {
-    "format": "{}",
-    "exec": "~/.config/waybar/scripts/battery.sh icon percentage",
-    "interval": 30,
-    "return-type": "plain-text",
-    "tooltip": true,
-    "tooltip-format": "🔋 حالة البطارية",
-  },
-
-  // doesn't exist
-  //"battery#bat2": {
-  //    "bat": "BAT2"
-  //},
-
-  "power-profiles-daemon": {
-    "format": "{icon}",
-    "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
-    "tooltip": true,
-    "format-icons": {
-      "default": "",
-      "performance": "󰓅",
-      "balanced": "☯",
-      "power-saver": "󰌪",
-    },
-  },
-
-  //"network": {
-  //    // "interface": "wlp2*", // (Optional) To force the use of this interface
-  //    "format-wifi": "{essid} ({signalStrength}%) ",
-  //    "format-ethernet": "{ipaddr}/{cidr} ",
-  //    "tooltip-format": "{ifname} via {gwaddr} ",
-  //   "format-linked": "{ifname} (No IP) ",
-  //    "format-disconnected": "Disconnected ⚠",
-  //    "format-alt": "{ifname}: {ipaddr}/{cidr}"
-  //},
 
   "pulseaudio": {
     "scroll-step": 0.5, // can be a float
@@ -220,45 +156,12 @@
       "phone": "",
       "portable": "",
       "car": "",
-      "default": ["", "", ""],
+      "default": ["", "", ""]
     },
-    "on-click": "pavucontrol",
+    "on-click": "pavucontrol"
   },
 
-  "custom/media": {
-    "format": "{icon} {text}",
-    "return-type": "json",
-    "max-length": 40,
-    "format-icons": {
-      "spotify": "",
-      "default": "🎜",
-    },
-    "escape": true,
-    "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null", // Script in resources folder
-    // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
-  },
 
-  "custom/power": {
-    "format": "⏻",
-    "tooltip": true,
-    "tooltip-format": "power menu",
-    "on-click": "wlogout -b 6",
-  },
-
-  "custom/launcher": {
-    "format": " {}",
-    "exec": "date +'Day %j'", // Julian day counter
-    "on-click": "kitty -e sh -c 'fastfetch; read -p \"Press enter to close...\"'",
-    "tooltip": false,
-  },
-
-  "custom/camera": {
-    "exec": "~/.config/waybar/scripts/camera-status.sh",
-    "return-type": "json",
-    "format": "{}",
-    "interval": 1,
-    "tooltip": false,
-  },
   "privacy": {
     "icon-spacing": 4,
     "icon-size": 18,
@@ -267,24 +170,107 @@
       {
         "type": "screenshare",
         "tooltip": true,
-        "tooltip-icon-size": 24,
+        "tooltip-icon-size": 24
       },
       {
         "type": "audio-in",
         "tooltip": true,
-        "tooltip-icon-size": 24,
-      },
+        "tooltip-icon-size": 24
+      }
     ],
     "ignore-monitor": true,
     "ignore": [
       {
         "type": "audio-in",
-        "name": "cava",
+        "name": "cava"
       },
       {
         "type": "screenshare",
-        "name": "obs",
-      },
-    ],
+        "name": "obs"
+      }
+    ]
+  },  
+  
+  
+  "custom/camera": {
+    "exec": "~/.config/waybar/scripts/camera-status.sh",
+    "return-type": "json",
+    "format": "{}",
+    "interval": 1,
+    "tooltip": false
   },
+
+
+  //"network": {
+  //    // "interface": "wlp2*", // (Optional) To force the use of this interface
+  //    "format-wifi": "{essid} ({signalStrength}%) ",
+  //    "format-ethernet": "{ipaddr}/{cidr} ",
+  //    "tooltip-format": "{ifname} via {gwaddr} ",
+  //   "format-linked": "{ifname} (No IP) ",
+  //    "format-disconnected": "Disconnected ⚠",
+  //    "format-alt": "{ifname}: {ipaddr}/{cidr}"
+  //},
+
+
+  "tray": {
+    "icon-size": 15,
+    "spacing": 10
+  },
+
+  "power-profiles-daemon": {
+    "format": "{icon}",
+    "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+    "tooltip": true,
+    "format-icons": {
+      "default": "",
+      "performance": "󰓅",
+      "balanced": "☯",
+      "power-saver": "󰌪"
+    }
+  },
+
+
+  "backlight": {
+    // "device": "acpi_video1",
+    "format": "{percent}% {icon}",
+    "format-icons": ["", "", "", "", "", "", "", "", ""]
+  },
+
+
+  "battery": {
+    "states": {
+      "good": 80,
+      "warning": 20,
+      "critical": 10
+    },
+    "format": "{capacity}% {icon}",
+    "format-full": "{capacity}% {icon}",
+    "format-charging": "󰂅 {capacity}%",
+    "format-charging-warning": "󰢝 {capacity}%",
+    "format-charging-critical": "󰢜 {capacity}%",
+    "format-plugged": "󰂅 {capacity}%",
+    "format-alt": "󱧥",
+    "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
+  },
+
+
+  // doesn't exist
+  //"battery#bat2": {
+  //    "bat": "BAT2"
+  //},
+
+
+  "clock": {
+    "format": "{:%I:%M %p}", // 12-hour with AM/PM
+    "format-alt": "{:%Y-%m-%d}",
+    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
+  },
+
+  
+  "custom/power": {
+    "format": "⏻",
+    "tooltip": true,
+    "tooltip-format": "power menu",
+    "on-click": "wlogout -b 6"
+  }
 }
