using nwg-display to manage displays, new cursor used "volantes_cursors"

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,7 +23,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
-
+source = ~/.config/hypr/monitors.conf
 
 ###################
 ### MY PROGRAMS ###
@@ -56,6 +56,7 @@ exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = poweralertd # send notfications about battary
+exec-once = hyprctl setcursor volantes_cursors 40 # change cursor in startup if neded
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -63,6 +64,9 @@ exec-once = poweralertd # send notfications about battary
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+ 
+# Cursor for all x11 apps like codium 
+env = XCURSOR_THEME,volantes_cursors
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
