enhance waybar to the next level, new p10k theme used to integrade with matugen, change font in kitty terminal

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -12,7 +12,7 @@
 
 ## === Font Configuration ===
 allow_remote_control yes
-font_family                 "JetBrainsMono Nerd Font"
+font_family                 "Hack Nerd Font"
 font_size                   12
 bold_font                   auto
 italic_font                 auto
