--- a/config/matugen/templates/kitty-colors.conf
+++ b/config/matugen/templates/kitty-colors.conf
@@ -1,47 +1,35 @@
-# Generated my matugen
-# writen by Samir Ahmed 
-# nice tempelete to fully work with matugen colors 
+#  ┳┳┓┏┓┏┳┓┳┳┏┓┏┓┳┓  ┓┏┓┳┏┳┓┏┳┓┓┏
+#  ┃┃┃┣┫ ┃ ┃┃┃┓┣ ┃┃━━┃┫ ┃ ┃  ┃ ┗┫
+#  ┛ ┗┛┗ ┻ ┗┛┗┛┗┛┛┗  ┛┗┛┻ ┻  ┻ ┗┛
+#                                
 
-cursor {{colors.primary.default.hex}}
-cursor_text_color {{colors.on_primary.default.hex}}
 
-foreground {{colors.on_surface.default.hex}}
-background {{colors.surface.default.hex}}
+# Core Colors
+background            {{ colors.background.default.hex }}
+foreground            {{ colors.on_surface.default.hex }}
+selection_foreground  {{ colors.primary.default.hex }}
+selection_background  {{ colors.on_primary.default.hex }}
+cursor                {{ colors.primary.default.hex }}
+cursor_text_color     {{ colors.surface.default.hex }}
 
-selection_foreground {{colors.on_secondary.default.hex}}
-selection_background {{colors.secondary_container.default.hex}}
+# Regular Colors
+color0  {{ colors.surface.default.hex }}               
+color1  {{ colors.error.default.hex }}                 
+color2  {{ colors.primary.default.hex }}               
+color3  {{ colors.tertiary.default.hex }}              
+color4  {{ colors.on_primary_container.default.hex }}  
+color5  {{ colors.on_secondary_container.default.hex }}
+color6  {{ colors.secondary.default.hex }}             
+color7  {{ colors.on_surface.default.hex }}            
 
-url_color {{colors.tertiary.default.hex}}
+# Bright Colors
+color8  {{ colors.surface_bright.default.hex }}         
+color9  {{ colors.error.default.hex }}                  
+color10 {{ colors.primary.default.hex }}                
+color11 {{ colors.tertiary.default.hex }}               
+color12 {{ colors.on_primary_container.default.hex }}   
+color13 {{ colors.on_secondary_container.default.hex }} 
+color14 {{ colors.secondary.default.hex }}              
+color15 {{ colors.on_surface.default.hex }}
 
-# Black & Bright Black
-color0 {{colors.surface_variant.default.hex}}
-# nice for text auto compilition
-color8 {{ colors.surface_variant.default.hex }} 
-
-# Red
-color1 {{colors.error.default.hex}}
-color9 {{colors.error_container.default.hex}}
-
-# Green
-color2 {{colors.secondary.default.hex}}
-color10 {{colors.secondary_container.default.hex}}
-
-# Yellow
-color3 {{colors.tertiary_fixed_dim.default.hex}}
-color11 {{colors.tertiary_container.default.hex}}
-
-# Blue
-color4 {{colors.primary.default.hex}}
-color12 {{colors.primary_container.default.hex}}
-
-# Magenta
-color5 {{colors.primary_fixed_dim.default.hex}}
-color13 {{colors.inverse_primary.default.hex}}
-
-# Cyan
-color6 {{colors.tertiary.default.hex}}
-color14 {{colors.tertiary_fixed.default.hex}}
-
-# White & Bright White
-color7 {{colors.on_surface.default.hex}}
-color15 {{colors.inverse_on_surface.default.hex}}
+# thanks to https://github.com/Abhra00/Matuprland/tree/main
