fix some bugs, using nwg-look, new scripts to add

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -66,9 +66,10 @@ exec-once = hyprctl setcursor volantes_cursors 40 # change cursor in startup if 
 
  
 # Cursor for all x11 apps like codium 
+env = HYPRCURSOR_THEME,volantes_cursors
+env = HYPRCURSOR_SIZE,40
 env = XCURSOR_THEME,volantes_cursors
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,40
 
 
 ###################
