clean some stuff

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -80,6 +80,10 @@ label {
 
 # INPUT FIELD
 input-field {
+    inner_color = $surface_container_highest
+    font_color = $on_surface
+    outer_color = $primary
+    fail_color = $error
     monitor =
     size = 25%, 10%
     outline_thickness = 2
