--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Adwaita
 gtk-icon-theme-name=Adwaita
-gtk-font-name=Adwaita Sans 11
+gtk-font-name=JetBrainsMono Nerd Font 11
 gtk-cursor-theme-name=volantes_cursors
 gtk-cursor-theme-size=40
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
@@ -14,4 +14,4 @@ gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
-gtk-application-prefer-dark-theme=0
+gtk-application-prefer-dark-theme=1
