--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -57,6 +57,7 @@ exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = poweralertd # send notfications about battary
 exec-once = hyprctl setcursor volantes_cursors 40 # change cursor in startup if neded
+exec-once = eww daemon & eww open clock
 
 #############################
 ### ENVIRONMENT VARIABLES ###
