--- a/config/matugen/templates/hyprlock-colors.conf
+++ b/config/matugen/templates/hyprlock-colors.conf
@@ -1,9 +1,11 @@
 # Image Path
 $image = {{image}}
 
-# An alpha background
-$surface_alpha = rgba({{colors.surface.default.hex_stripped}}4d)
-
+# Semi-transparent alpha surface (for glassy effect)
+$surface_container_highest = rgba({{ colors.surface.default.hex_stripped }}12)
+$on_surface = rgba({{ colors.on_surface.default.hex_stripped }}e6)
+$primary = rgba({{ colors.primary.default.hex_stripped }}00)
+$error = rgba({{ colors.error.default.hex_stripped }}99)
 # All Colors
 <* for name, value in colors *>
 ${{name}} = rgba({{value.default.hex_stripped}}ff)
