using new color generator walrs

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 exec-once = systemctl --user start hyprpolkitagent # systemctl --user enable --now hyprpolkitagent.service for uwsm if switched
 exec-once = hyprsunset # systemctl --user enable --now hyprsunset.service # for make it as a systemd service
-exec-once = swaync
+exec-once = mako
 exec-once = nm-applet, blueman-applet
 exec-once = swww-daemon
 exec-once = waybar  # systemctl --user enable --now waybar.service # to run as a service
@@ -94,7 +94,7 @@ env = XCURSOR_SIZE,40
 ### LOOK AND FEEL ###
 #####################
 
-source = ~/.cache/wallpaper-theme/hyprland-colors.conf 
+source = ~/.cache/wal/hyprland-colors.conf 
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
@@ -104,10 +104,6 @@ general {
     gaps_out = 3
 
     border_size = 2
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $primary $tertiary_container 45deg
-    col.inactive_border = $surface_container_highest
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -133,7 +129,7 @@ decoration {
         enabled = true
         range = 4
         render_power = 3
-        color = $shadow
+        
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
@@ -340,7 +336,6 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 
 # For wlogout
 layerrule = blur, logout_dialog
-
 #windowrulev2 = float,class:.*
 
 
