--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -39,13 +39,13 @@ wheel_scroll_min_lines      1
 ## === Visuals ===
 
 enable_audio_bell           no
-window_padding_width        3
-hide_window_decorations     true
+window_padding_width        0
+hide_window_decorations     false
 background_opacity          0.8
 dynamic_background_opacity  true
 
 ## === Theme Colors from matugen ===
-include ~/.cache/wallpaper-theme/kitty-colors.conf
+include ~/.cache/wal/kitty-colors.conf
 
  # auto change color for currents opend terminals
 
