fix some spagitti

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ source = ~/.config/hypr/monitors.conf
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun
-
+$scriptSRC = ~/.config/scripts
 
 #################
 ### AUTOSTART ###
