change place of scripts

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ source = ~/.config/hypr/monitors.conf
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun
-$scriptSRC = ~/.config/scripts
+$scripts = ~/.config/scripts
 
 #################
 ### AUTOSTART ###
@@ -252,10 +252,10 @@ bind = $mainMod, TAB, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/change-wallpaper/change-wallpaper.sh # change wallpaper
-bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
+bind = $mainMod SHIFT, W, exec, $scripts/change-wallpaper/change-wallpaper.sh # change wallpaper
+bind = $mainMod, F1, exec, $scripts/gamemode.sh
 
-bind = ALT SHIFT, space, exec, ~/.config/hypr/scripts/toggle-kb.sh # script to change language input and send notification
+bind = ALT SHIFT, space, exec, $scripts/toggle-kb.sh # script to change language input and send notification
 
 # Keybinds
 bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
