--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -14,6 +14,7 @@
 allow_remote_control yes
 font_family                 'Hack Nerd Font'
 font_size                   12
+modify_font                 weight bold
 bold_font                   auto
 italic_font                 auto
 bold_italic_font            auto
