--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,8 +22,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-source = ~/.config/hypr/monitors.conf
+monitor=eDP-1,1366x768@60.11,0x0,1.0
+monitor=,preferred,auto,1.0,mirror,eDP-1
+# source = ~/dotfiles/config/hypr/monitors.conf
 
 ###################
 ### MY PROGRAMS ###
