--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -11,7 +11,7 @@ source = ~/.cache/wallpaper-theme/hyprlock-colors.conf
 # BACKGROUND
 background {
     monitor =
-    path = ~/.cache/wallpaper-theme/hyprlock.png
+    path = ~/.cache/wal/hyprlock.png
     blur_passes = 2
     contrast = 0.8916
     brightness = 0.8172
