--- a/config/mako/config
+++ b/config/mako/config
@@ -1,6 +1,6 @@
 layer=overlay
-background-color=#151218
-border-color=#7A4E5D
+background-color=#1A1B1C
+border-color=#4B4D4E
 margin=12
 padding=12
 border-size=2
@@ -8,16 +8,16 @@ border-radius=8
 default-timeout=5000
 ignore-timeout=1
 font=JetBrainsMono Nerd Font 12, Hack Nerd Font 12
-text-color=#FFF1D2
+text-color=#C1CBC7
 outer-margin=0,5,15,0
 anchor=bottom-right
 
 [urgency=high]
-border-color=#AD5761
+border-color=#655049
 default-timeout=0
 
 [urgency=low]
-border-color=#403C44
+border-color=#454647
 
 [category=mpd]
 default-timeout=2000
