--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -323,8 +323,6 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 #windowrule = suppressevent maximize, class:.*
@@ -334,10 +332,56 @@ windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # For wlogout
 layerrule = blur, logout_dialog
-layerrule = blur, class:kitty
+#layerrule = blur, class:kitty
 layerrule = blur, class:mako
 
-layerrule = blur, waybar
+#layerrule = blur, gtk-layer-shell
+
+
+# Example windowrule v2
+windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+#windowrulev2 = opacity 0.90 0.90,class:^(Firefox)$
+windowrulev2 = opacity 0.80 0.80,class:^(Codium)$
+#windowrulev2 = opacity 0.80 0.80,class:^(waybar)$
+windowrulev2 = opacity 0.80 0.80,class:^(dev.warp.Warp)$
+windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
+windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
+windowrulev2 = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
+windowrulev2 = opacity 0.90 1,class:^(kitty)$
+windowrulev2 = opacity 0.80 0.80,class:^(org.gnome.Nautilus)$
+windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
+windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
+windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
+windowrulev2 = opacity 0.80 0.80,class:^(qt6ct)$
+windowrulev2 = opacity 0.80 0.80,class:^(kvantummanager)$
+windowrulev2 = opacity 0.80 0.70,class:^(pavucontrol)$
+windowrulev2 = opacity 0.80 0.70,class:^(blueman-manager)$
+windowrulev2 = opacity 0.80 0.70,class:^(nm-applet)$
+windowrulev2 = opacity 0.70 0.70,class:^(Spotify)$
+windowrulev2 = opacity 0.70 0.70,initialTitle:^(Spotify Free)$
+windowrulev2 = opacity 0.80 0.70,class:^(nm-connection-editor)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = opacity 0.80 0.70,class:^(polkit-gnome-authentication-agent-1)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.gtk)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
+
+windowrulev2 = float,class:^(kvantummanager)$
+windowrulev2 = float,class:^(qt5ct)$
+windowrulev2 = float,class:^(qt6ct)$
+windowrulev2 = float,class:^(nwg-look)$
+windowrulev2 = float,class:^(org.kde.ark)$
+windowrulev2 = float,class:^(pavucontrol)$
+windowrulev2 = float,class:^(blueman-manager)$
+windowrulev2 = float,class:^(nm-applet)$
+windowrulev2 = float,class:^(nm-connection-editor)$
+windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+
+# windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+# layerrule = blur,waybar
+layerrule = ignorezero,tofi
+layerrule = ignorezero, mako
+layerrule = blur,mako
 #layerrule = blur, bar
 #layerrule = ignorezero, waybar
 #layerrule = ignorealpha 0, waybar
