--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -12,45 +12,43 @@
 
 ## === Font Configuration ===
 allow_remote_control yes
-font_family                 'Hack Nerd Font'
-font_size                   12
-modify_font                 weight bold
-bold_font                   auto
+font_family                 JetBrainsMono Nerd Font
+font_size                   13.0
+#bold_font                   auto
 italic_font                 auto
 bold_italic_font            auto
 
 ## === Window Size ===
-remember_window_size        yes
-initial_window_width        950
-initial_window_height       500
+#remember_window_size        yes
+#initial_window_width        950
+#initial_window_height       500
 
 ## === Cursor Settings ===
-cursor_shape                underline
-cursor_blink_interval       0.5
-cursor_stop_blinking_after  1
-cursor_underline_thickness  2.5
-cursor_trail                10
-cursor_trail_decay          0.1 0.4
-cursor_trail_start_threshold 2
+#cursor_shape                underline
+#cursor_blink_interval       0.5
+#cursor_stop_blinking_after  1
+#cursor_underline_thickness  2.5
+cursor_trail                13 
+#cursor_trail_decay          0.1 0.4
+#cursor_trail_start_threshold 2
 
 ## === Scrolling ===
-scrollback_lines            2000
-wheel_scroll_min_lines      1
+#scrollback_lines            2000
+#wheel_scroll_min_lines      1
 
 ## === Visuals ===
+#enable_audio_bell           no
+window_padding_width        15
+#hide_window_decorations     false
+#background_opacity          0.8
+#dynamic_background_opacity  false
 
-enable_audio_bell           no
-window_padding_width        20
-hide_window_decorations     false
-background_opacity          0.8
-dynamic_background_opacity  false
-
-## === Theme Colors from matugen ===
+## === Theme Colors ===
 include ~/.cache/wallust/kitty-colors.conf
 
  # auto change color for currents opend terminals
 
-# Optional shell
+# === Shell ===
 # shell fish
 
 
