--- a/config/mako/config
+++ b/config/mako/config
@@ -1,23 +1,23 @@
 layer=overlay
-background-color=#1A1B1C
-border-color=#4B4D4E
+background-color=#0D0000
+border-color=#866D75
 margin=12
 padding=12
 border-size=2
 border-radius=8
 default-timeout=5000
 ignore-timeout=1
-font=JetBrainsMono Nerd Font 12, Hack Nerd Font 12
-text-color=#C1CBC7
+font=Hack Nerd Font 11
+text-color=#E5F0F4
 outer-margin=0,5,15,0
 anchor=bottom-right
 
 [urgency=high]
-border-color=#655049
+border-color=#7B757E
 default-timeout=0
 
 [urgency=low]
-border-color=#454647
+border-color=#17090B
 
 [category=mpd]
 default-timeout=2000
