add opcity for codium

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -341,7 +341,7 @@ layerrule = blur, class:mako
 # Example windowrule v2
 windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 #windowrulev2 = opacity 0.90 0.90,class:^(Firefox)$
-windowrulev2 = opacity 0.80 0.80,class:^(Codium)$
+windowrulev2 = opacity 0.90 0.90,class:^(codium)$
 #windowrulev2 = opacity 0.80 0.80,class:^(waybar)$
 windowrulev2 = opacity 0.80 0.80,class:^(dev.warp.Warp)$
 windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
